# shuttle-fullstack-rust-example

./: .gitignore  README.md
backend/: Cargo.toml  build.rs
backend/src/: main.rs
