[package]
name = "template-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# In-house deps
template-model = { path = "../model" }

# Standard deps
axum = { version = "0.7" }
shuttle-runtime = { version = "0.39.0" }
shuttle-axum = { version = "0.39.0" }
tokio = "1.28.2"

[build-dependencies]
flate2 = "1.0"
